Acabei eliminacao de utilizadores
